--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.4.0",
+    "@tailwindcss/vite": "^4.1.16",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.16",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/three": "^0.180.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
